--- a/styles.css
+++ b/styles.css
@@ -372,13 +372,13 @@ p{
 .contact{
     display: flex;
 }
-.contact-left{
-
-    flex-basis: 35%;
+.contact-left {
+margin-left: 50rem;
 }
 
 .contact-right{
-    flex-basis: 60%;
+    margin-left: 20rem;
+    display: inline;
 }
 
 .contact-left p{
@@ -526,6 +526,7 @@ form input,textarea{
     border-style: hidden;
     font-size: 1rem;
     color: white
+    
 }
 
 .social-icons a{
@@ -535,4 +536,9 @@ form input,textarea{
     border-style: solid;
     border-width: 1px;
 }
-    
+.buttons{
+    margin: 10px;
+}    
+.Submit{
+    margin-left: 40rem;
+}
